[project]
name = "coindcx-crypto-pnl-analyzer"
version = "0.1.0"
description = "A Python script to calculate cryptocurrency profit and loss statements compliant with Indian VDA (Virtual Digital Asset) taxation under Section 115BBH of the Income Tax Act, 1961. This script is provided as-is for informational purposes only and should not be considered as tax advice."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
]
